<resources>
    <string name="app_name">Tailor/درزی</string>
    <string name="login">LOGIN</string>
    <string name="add_customer">Add customer</string>
    <string name="or">OR</string>
    <string name="create_aac">Create Account </string>
    <string name="signup">Sign Up</string>
    <string name="save">Save</string>
    <string name="email_phone">Email</string>
    <string name="phone">phone</string>
    <string name="user_name">Name</string>
    <string name="user_pass">Password</string>
    <string name="re_pass">Re enter Password</string>
    <string name="forgotten_pass">Forgot Password?</string>
    <string name="invalid_data">inavlid data</string>
    <string name="search">Search</string>
    <string name="inch">Inch</string>
    <string name="naap">Measurements</string>
    <string name="naap_no">Measurement no</string>
    <string name="send">Send</string>
    <string name="naap_Q">Measurement shirt</string>
    <string name="length_Q">Shirt length</string>
    <string name="length_b">Arm length</string>
    <string name="shldr_to_shldr">Shoulder width</string>
    <string name="shoulder">Shoulder</string>
    <string name="kuff">Kuff</string>
    <string name="colar">Colar</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="side_pocket">Side pocket</string>
    <string name="front_pocket">Front pocket</string>

    <string name="naap_S">Measurement Trouser</string>
    <string name="length_S">Trouser length</string>
    <string name="pancha">Trouser Opening</string>
    <string name="down_pocket">Pocket</string>
    <string name="embroidery">Embroidery no</string>
    <string name="suits">Suits </string>
    <string name="wapsi">Return date</string>
    <string name="details">Other details</string>
    <string name="recovery">Recovery</string>
    <string name="updated">Data updated</string>
    <string name="added">Data added</string>
    <string name="deleted">Data deleted</string>
    <string name="outstanding">Outstanding</string>
    <string name="update_available">Latest App update available</string>
    <string name="update">App Update</string>
    <string name="update_btn">Update</string>
    <string name="cancel">Cancel</string>
    <string name="check_interent">Please check your internt connection.</string>
    <string name="clear_key">Clear</string>


    <string name="english" translatable="false">English</string>
    <string name="urdu" translatable="false">‎اردو</string>
    <string name="select_lang_eng" translatable="false">Select language</string>
    <string name="select_lang_urdu" translatable="false">زبان منتخب کریں</string>
    <string name="language" translatable="false">Language/زبان</string>
    <string name="keyboard" translatable="false">Keyboard</string>
    <string name="delete_acc">Delete account</string>
    <string name="deliver">Delivered</string>
    <string name="remains">Oustanding Amount</string>
    <string name="orders">Orders</string>
    <string name="customer">Customers</string>
    <string name="message">Enter Message</string>
    <string name="message_app">Messaging app</string>
    <string name="booking">Booking Msg</string>
    <string name="ready">Suit Ready Msg</string>
    <string name="error">Error</string>
    <string name="phone_msg">Unknown phone number format. The number should start with the country code +92123456789</string>
    <string name="smsMessage">Your suit is ready. Please take your suit and clear the bill =</string>
    <string name="readyMessage">Your suit is ready. Please visit Stylish Tailor in Anarkali Bazaar, Khushab, to collect it.</string>
    <string name="remainingAmount">Amount=</string>
    <string name="totalsuits">Suits =</string>
    <string name="total">Total</string>
    <string name="Wapsi">Return=</string>
    <string name="done" translatable="false" >Done</string>
    <string name="permission_rationale" translatable="false">Camera and Storage permission is needed for core functionality</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_image">Add image</string>
    <string name="take_pic">Please take a picture</string>
    <string name="pic_option">How do you want to add an image?</string>
    <string-array name="lang_array" translatable="false">
        <item>English</item>
        <item>‎اردو</item>
    </string-array>
    <string-array name="keyboard_array" translatable="false">
        <item>System</item>
        <item>Custom</item>
    </string-array>
    <string-array name="messaging_array" translatable="false">
        <item>Whats App</item>
        <item>SMS</item>
    </string-array>
</resources>