<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@drawable/rounded_corner_white">

    <RelativeLayout
        android:id="@+id/list_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp">

            <TextView
                android:id="@+id/tile_text"
                style="@style/bold_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/add_image" />
            <TextView
                android:id="@+id/message"
                android:layout_below="@id/tile_text"
                style="@style/medium_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:maxLines="2"
                android:gravity="center_horizontal"
                android:text="@string/pic_option" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_below="@id/message"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mCameraTextView"
                    style="@style/bold_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/camera" />
                <TextView
                    android:id="@+id/mGalleryTextView"
                    style="@style/bold_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:background="@drawable/button_background"
                    android:text="@string/gallery" />
                <TextView
                    android:id="@+id/mCancelTextView"
                    style="@style/bold_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:background="@drawable/button_background"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:text="@string/cancel" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
