<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taylor_bg"
    tools:context=".activities.MainActivity">
    <LinearLayout
        android:id="@+id/language_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/rounded_corner_doubleshade"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/language_title_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/medium_16"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_lang_eng"
            />
        <TextView
            android:id="@+id/language_title_ur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/medium_16"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_lang_urdu"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/line_color"/>
        <RadioGroup
            android:id="@+id/languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/eng_rad"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                style="@style/regular_14"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:tag="Eng"
                android:text="@string/english"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/eng_urdu"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                style="@style/regular_14"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:tag="ur"
                android:text="@string/urdu" />

        </RadioGroup>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:indeterminateTint="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>