<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_data"
    android:padding="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:background="@drawable/rounded_corner_doubleshade"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/deliver"
        style="@style/medium_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:elevation="@dimen/_10sdp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_6sdp"
        android:shadowColor="@color/gray"
        android:text="@string/deliver"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_user"/>
    <TextView
        android:id="@+id/name_user"
        style="@style/bold_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliver" />
    <TextView
        android:id="@+id/phone_user"
        style="@style/bold_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/deliver"
        app:layout_constraintEnd_toEndOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wasooli_const"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_user">

        <TextView
            android:id="@+id/wasooli_title"
            style="@style/bold_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="center_vertical"
            android:text="@string/recovery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/wasooli_Val"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wasooli_Val"
            style="@style/regular_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:minWidth="@dimen/_50sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wasooli_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rema_const"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_user">

        <TextView
            android:id="@+id/rema_title"
            style="@style/bold_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="center_vertical"
            android:text="@string/outstanding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rema_Val"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rema_Val"
            style="@style/regular_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:minWidth="@dimen/_50sdp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rema_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/khata"
        style="@style/bold_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:text="@string/naap_no"
        app:layout_constraintBottom_toTopOf="@id/khata_val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/khata_val"
        style="@style/medium_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minWidth="@dimen/_50sdp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/khata" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/line_color"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>