<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@drawable/rounded_corner_doubleshade"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/name_user"
        style="@style/bold_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_user"
        style="@style/bold_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/khata"
        style="@style/bold_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:text="@string/naap_no"
        app:layout_constraintBottom_toTopOf="@id/khata_Val"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/khata_Val"
        style="@style/medium_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minWidth="@dimen/_50sdp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/khata" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/line_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>